Fixed overflowing x-axis elements

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -53,6 +53,12 @@ body {
   margin-right: auto;
 }
 
+//Prevents x scrolling
+// html, body {
+//   max-width: 100%;
+//   overflow-x: hidden;
+// }
+
 a {
   text-decoration: none;
   color: $content_textColor;
@@ -179,6 +185,8 @@ a {
   .mainContent_row {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: auto;
     margin-top: 2rem;
     margin-bottom: 4rem;
     .mainContent_row_blurb {
@@ -198,8 +206,6 @@ a {
   //Top Row
   .mainContent_row:nth-child(2) {
     margin-left: 10rem;
-    width: 100%;
-    height: auto;
     .mainContent_row_blurb {
       width: 35%;
       height: auto;
@@ -222,8 +228,6 @@ a {
     background-repeat: no-repeat;
     background-position-y: -50rem;
     background-position-x: -20rem;
-    width: 100%;
-    height: auto;
     justify-content: space-evenly;
     .mainContent_row_blurb {
       margin-top: auto;
@@ -233,15 +237,17 @@ a {
     .mainContent_row_img {
       margin-top: -4rem;
       margin-bottom: -7rem;
+      width: 40%;
+      height: auto;
     }
   }
   //"Free, open, simple" row
   .mainContent_row:nth-child(4) {
-    width: 100%;
-    height: auto;
+    overflow-x: hidden;
     .mainContent_row_img {
-    margin-left: -18rem;
-    
+      margin-left: -17.5rem;
+      width: 100%;
+      height: auto;
     }
     .mainContent_row_blurb {
       margin-top: 8rem;
@@ -258,7 +264,8 @@ footer#bottomContent {
   flex-direction: row;
   width: 100%;
   height: auto;
-  padding: 4rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   img {
     transform: scale(40%);
     margin-bottom: 12rem;
